--- a/style/style.css
+++ b/style/style.css
@@ -40,3 +40,22 @@ iframe#tela {
     width: 269px;
     height: 471px;
 }
+
+section#redes-sociais {
+    text-align: right;
+}
+
+section#redes-sociais img {
+    width: 50px;
+    margin: 10px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.564);
+    box-sizing: border-box;
+}
+
+section#redes-sociais img:hover {
+    transition: transform 0.4s, border .6s;
+    border: 2px solid rgba(255, 255, 255, 0.612);
+    transform: translate(-2px, -2px);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.544);
+}
